Update swagger and API types to match latest API changes
