# src/api/swagger.json
@@ -170,6 +170,53 @@
       }
     },
     "/clusters/{clusterId}/downloads/image": {
+      "post": {
+        "tags": ["inventory"],
+        "summary": "Create a new OpenShift per-cluster discovery ISO",
+        "operationId": "GenerateClusterISO",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "clusterId",
+            "description": "The ID of the cluster whose ISO to create",
+            "type": "string",
+            "format": "uuid",
+            "required": true
+          },
+          {
+            "in": "body",
+            "name": "image-create-params",
+            "description": "New ISO parameters",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/image-create-params"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created ISO",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "imageId": {
+                  "type": "string",
+                  "format": "uuid"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          },
+          "404": {
+            "description": "Cluster not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
       "get": {
         "tags": ["inventory"],
         "summary": "Download OpenShift per-cluster discovery ISO",
@@ -186,24 +233,11 @@
           },
           {
             "in": "query",
-            "name": "proxyIp",
-            "description": "The IP address of the HTTP proxy that agents should use to access the discovery service",
+            "name": "imageId",
+            "description": "The ID of a previously-created image",
             "type": "string",
-            "format": "hostname"
-          },
-          {
-            "in": "query",
-            "name": "proxyPort",
-            "description": "The port of the HTTP proxy",
-            "type": "integer",
-            "minimum": 0,
-            "maximum": 65535
-          },
-          {
-            "in": "query",
-            "name": "sshPublicKey",
-            "description": "SSH public key for debugging the installation",
-            "type": "string"
+            "format": "uuid",
+            "required": true
           }
         ],
         "responses": {
@@ -218,7 +252,7 @@
             "description": "Invalid parameters"
           },
           "404": {
-            "description": "Cluster not found"
+            "description": "Cluster or image not found"
           },
           "500": {
             "description": "Internal server error"
@@ -226,32 +260,49 @@
         }
       }
     },
-    "/clusters/{clusterId}/downloads/kubeconfig": {
+    "/clusters/{clusterId}/downloads/files": {
       "get": {
         "tags": ["inventory"],
-        "summary": "Download the kubeconfig file for the specified cluster",
-        "operationId": "DownloadClusterKubeconfig",
+        "summary": "Download files relating to the installed/installing cluster",
+        "operationId": "DownloadClusterFiles",
         "produces": ["application/octet-stream"],
         "parameters": [
           {
             "in": "path",
             "name": "clusterId",
-            "description": "The ID of the cluster whose kubeconfig to download",
+            "description": "The ID of the installed/installing cluster",
             "type": "string",
             "format": "uuid",
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "fileName",
+            "description": "The desired file to download",
+            "type": "string",
+            "enum": [
+              "bootstrap.ign",
+              "master.ign",
+              "metadata.json",
+              "worker.ign",
+              "kubeadmin-password",
+              "kubeconfig"
+            ],
             "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "The kubeconfig file",
+            "description": "The requested file",
             "schema": {
-              "type": "string",
-              "format": "binary"
+              "type": "file"
             }
           },
           "404": {
             "description": "Cluster not found"
+          },
+          "409": {
+            "description": "Conflict"
           },
           "500": {
             "description": "Internal server error"
@@ -663,6 +714,26 @@
         }
       }
     },
+    "image-create-params": {
+      "type": "object",
+      "properties": {
+        "proxyIp": {
+          "type": "string",
+          "format": "hostname",
+          "description": "The IP address of the HTTP proxy that agents should use to access the discovery service"
+        },
+        "proxyPort": {
+          "type": "integer",
+          "description": "The port of the HTTP proxy",
+          "minimum": 0,
+          "maximum": 65535
+        },
+        "sshPublicKey": {
+          "type": "string",
+          "description": "SSH public key for debugging the installation"
+        }
+      }
+    },
     "host-create-params": {
       "type": "object",
       "required": ["hostId"],
@@ -700,7 +771,8 @@
                 "insufficient",
                 "disabled",
                 "installing",
-                "installed"
+                "installed",
+                "error"
               ]
             },
             "statusInfo": {
@@ -1021,7 +1093,7 @@
             },
             "status": {
               "type": "string",
-              "enum": ["creating", "ready", "error"]
+              "enum": ["insufficient", "ready", "error", "installing", "installed"]
             },
             "hosts": {
               "x-go-custom-tag": "gorm:\"foreignkey:ClusterID;association_foreignkey:ID\"",
